Project roster_db {
  database_type: 'PostgreSQL'
  Note: '''
    Roster Application — Workforce Scheduling
    Multi-tenant PostgreSQL schema with RLS, HMAC-chained audit log
  '''
}

Enum company_status {
  active
  suspended
  deleted
}

Enum person_role {
  company_admin
  manager
  employee
  super_admin
  viewer
}

Enum person_status {
  active
  inactive
  invited
  deleted
}

Enum team_membership_role {
  manager
  employee
}

Enum shift_status {
  draft
  published
  cancelled
}

Enum assignment_status {
  pending
  approved
  rejected
  cancelled
}

Enum time_off_type {
  vacation
  sick
  personal
  bereavement
  other
}

Enum time_off_status {
  pending
  approved
  denied
  cancelled
}

Enum swap_status {
  pending
  accepted
  rejected
  cancelled
}

Enum notification_channel {
  email
  slack
  teams
  webhook
  push
}

Enum notification_status {
  pending
  sent
  delivered
  bounced
  failed
}

Enum violation_type {
  missed_meal_break
  missed_rest_break
  late_clock_in
  early_clock_out
  no_clock_in
  overtime_exceeded
  min_rest_violation
  predictive_scheduling_violation
}

Enum violation_status {
  open
  acknowledged
  resolved
  dismissed
}

Table companies {
  id UUID [pk, default: `gen_random_uuid()`]
  name VARCHAR(255) [not null]
  slug VARCHAR(100) [not null, unique]
  timezone VARCHAR(64) [not null, default: 'UTC']
  locale VARCHAR(10) [not null, default: 'en-US']
  status company_status [not null, default: 'active']
  branding_logo_url TEXT
  branding_primary_color VARCHAR(7)
  hipaa_enabled BOOLEAN [not null, default: false]
  data_retention_days INTEGER [not null, default: 365]
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
  deleted_at TIMESTAMPTZ
}

Table company_settings {
  company_id UUID [pk, ref: > companies.id, note: '1:1 with companies']
  overtime_threshold_hours INTEGER [not null, default: 40]
  overtime_daily_threshold_hours INTEGER [not null, default: 8]
  min_rest_hours INTEGER [not null, default: 8]
  meal_break_threshold_minutes INTEGER [not null, default: 300]
  meal_break_duration_minutes INTEGER [not null, default: 30]
  rest_break_threshold_minutes INTEGER [not null, default: 240]
  reminder_lead_minutes INTEGER [not null, default: 60]
  daily_digest_enabled BOOLEAN [not null, default: true]
  self_scheduling_enabled BOOLEAN [not null, default: false]
  gps_required BOOLEAN [not null, default: false]
  break_tracking_enabled BOOLEAN [not null, default: true]
  predictive_scheduling_days INTEGER
  allowed_ip_ranges INET[]
  mlts_enabled BOOLEAN [not null, default: false]
  data_residency_region VARCHAR(20)
  updated_at TIMESTAMPTZ [not null, default: `NOW()`]
}

Table locations {
  id UUID [pk, default: `gen_random_uuid()`]
  company_id UUID [not null, ref: > companies.id]
  name VARCHAR(255) [not null]
  address TEXT
  city VARCHAR(100)
  state_province VARCHAR(100)
  country VARCHAR(100)
  timezone VARCHAR(64) [not null]
  latitude DECIMAL(10,7)
  longitude DECIMAL(10,7)
  geofence_radius_meters INTEGER
  is_active BOOLEAN [not null, default: true]
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
  deleted_at TIMESTAMPTZ
}

Table positions {
  id UUID [pk, default: `gen_random_uuid()`]
  company_id UUID [not null, ref: > companies.id]
  name VARCHAR(255) [not null]
  description TEXT
  pay_rate DECIMAL(10,2)
  is_active BOOLEAN [not null, default: true]
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
  deleted_at TIMESTAMPTZ
  indexes {
    (company_id, name) [unique]
  }
}

Table skills {
  id UUID [pk, default: `gen_random_uuid()`]
  company_id UUID [not null, ref: > companies.id]
  name VARCHAR(255) [not null]
  description TEXT
  is_active BOOLEAN [not null, default: true]
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
  indexes {
    (company_id, name) [unique]
  }
}

Table position_skills {
  id UUID [pk, default: `gen_random_uuid()`]
  position_id UUID [not null, ref: > positions.id]
  skill_id UUID [not null, ref: > skills.id]
  is_required BOOLEAN [not null, default: true]
  indexes {
    (position_id, skill_id) [unique]
  }
}

Table teams {
  id UUID [pk, default: `gen_random_uuid()`]
  company_id UUID [not null, ref: > companies.id]
  location_id UUID [ref: > locations.id]
  name VARCHAR(255) [not null]
  manager_id UUID [ref: > people.id, note: 'set after people table exists']
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
  deleted_at TIMESTAMPTZ
}

Table people {
  id UUID [pk, default: `gen_random_uuid()`]
  company_id UUID [not null, ref: > companies.id]
  team_id UUID [not null, ref: > teams.id]
  location_id UUID [ref: > locations.id]
  position_id UUID [ref: > positions.id]
  employee_id VARCHAR(100)
  name VARCHAR(255) [not null]
  email CITEXT [not null]
  phone VARCHAR(30)
  password_hash VARCHAR(255) [not null]
  timezone VARCHAR(64) [not null, default: 'UTC']
  role person_role [not null, default: 'employee']
  status person_status [not null, default: 'invited']
  mfa_enabled BOOLEAN [not null, default: false]
  mfa_secret VARCHAR(64)
  invited_at TIMESTAMPTZ
  invite_accepted_at TIMESTAMPTZ
  subscription_token VARCHAR(128) [unique]
  data_exported_at TIMESTAMPTZ
  invite_token VARCHAR(255) [unique]
  invited_by UUID [ref: > people.id]
  hourly_rate DECIMAL(10,2)
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
  deleted_at TIMESTAMPTZ
  indexes {
    (company_id, email) [unique]
  }
}

Table team_memberships {
  id UUID [pk, default: `gen_random_uuid()`]
  team_id UUID [not null, ref: > teams.id]
  person_id UUID [not null, ref: > people.id]
  role team_membership_role [not null, default: 'employee']
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
  indexes {
    (team_id, person_id) [unique]
  }
}

Table person_skills {
  id UUID [pk, default: `gen_random_uuid()`]
  person_id UUID [not null, ref: > people.id]
  skill_id UUID [not null, ref: > skills.id]
  acquired_at DATE
  expires_at DATE
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
  indexes {
    (person_id, skill_id) [unique]
  }
}

Table shift_templates {
  id UUID [pk, default: `gen_random_uuid()`]
  company_id UUID [not null, ref: > companies.id]
  team_id UUID [not null, ref: > teams.id]
  position_id UUID [ref: > positions.id]
  title VARCHAR(255) [not null]
  description TEXT
  duration_minutes INTEGER [not null]
  start_time TIME [not null]
  required_count INTEGER [not null, default: 1]
  max_count INTEGER
  is_active BOOLEAN [not null, default: true]
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
  updated_at TIMESTAMPTZ [not null, default: `NOW()`]
}

Table template_skills {
  id UUID [pk, default: `gen_random_uuid()`]
  shift_template_id UUID [not null, ref: > shift_templates.id]
  skill_id UUID [not null, ref: > skills.id]
  min_count INTEGER [not null, default: 1]
  indexes {
    (shift_template_id, skill_id) [unique]
  }
}

Table recurrence_rules {
  id UUID [pk, default: `gen_random_uuid()`]
  shift_template_id UUID [not null, unique, ref: > shift_templates.id]
  rrule_string TEXT [not null]
  dtstart TIMESTAMPTZ [not null]
  dtend TIMESTAMPTZ
  exdates TIMESTAMPTZ[]
  skip_holidays BOOLEAN [not null, default: false]
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
}

Table shifts {
  id UUID [pk, default: `gen_random_uuid()`]
  company_id UUID [not null, ref: > companies.id]
  team_id UUID [not null, ref: > teams.id]
  location_id UUID [ref: > locations.id]
  template_id UUID [ref: > shift_templates.id]
  position_id UUID [ref: > positions.id]
  title VARCHAR(255) [not null]
  start_at TIMESTAMPTZ [not null]
  end_at TIMESTAMPTZ [not null]
  timezone VARCHAR(64) [not null]
  required_count INTEGER [not null, default: 1]
  max_count INTEGER
  status shift_status [not null, default: 'draft']
  recurrence_id UUID
  is_exception BOOLEAN [not null, default: false]
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
  updated_at TIMESTAMPTZ [not null, default: `NOW()`]
}

Table shift_skills {
  id UUID [pk, default: `gen_random_uuid()`]
  shift_id UUID [not null, ref: > shifts.id]
  skill_id UUID [not null, ref: > skills.id]
  min_count INTEGER [not null, default: 1]
  indexes {
    (shift_id, skill_id) [unique]
  }
}

Table shift_assignments {
  id UUID [pk, default: `gen_random_uuid()`]
  shift_id UUID [not null, ref: > shifts.id]
  person_id UUID [not null, ref: > people.id]
  status assignment_status [not null, default: 'pending']
  requested_at TIMESTAMPTZ [not null, default: `NOW()`]
  approved_at TIMESTAMPTZ
  approved_by UUID [ref: > people.id]
  cancelled_at TIMESTAMPTZ
  confirmed_at TIMESTAMPTZ
  indexes {
    (shift_id, person_id) [unique]
  }
}

Table shift_swap_requests {
  id UUID [pk, default: `gen_random_uuid()`]
  shift_assignment_id UUID [not null, ref: > shift_assignments.id]
  requester_id UUID [not null, ref: > people.id]
  target_id UUID [ref: > people.id]
  status swap_status [not null, default: 'pending']
  manager_approved BOOLEAN
  manager_id UUID [ref: > people.id]
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
  resolved_at TIMESTAMPTZ
}

Table clock_entries {
  id UUID [pk, default: `gen_random_uuid()`]
  shift_assignment_id UUID [ref: > shift_assignments.id]
  person_id UUID [ref: > people.id]
  company_id UUID [not null, ref: > companies.id]
  location_id UUID [ref: > locations.id]
  clock_in_at TIMESTAMPTZ [not null]
  clock_out_at TIMESTAMPTZ
  break_in_at TIMESTAMPTZ
  break_out_at TIMESTAMPTZ
  break_duration_minutes INTEGER
  duration_minutes INTEGER
  latitude DECIMAL(10,7)
  longitude DECIMAL(10,7)
  notes TEXT
  source_ip INET
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
  Note: 'Append-only — UPDATE/DELETE blocked by triggers'

  indexes {
    (person_id)
    (clock_in_at, clock_out_at)
    (1) [type: index, name: 'idx_ce_active', where: 'clock_out_at IS NULL']
  }
}

Table time_off_requests {
  id UUID [pk, default: `gen_random_uuid()`]
  company_id UUID [not null, ref: > companies.id]
  person_id UUID [not null, ref: > people.id]
  type time_off_type [not null]
  start_at TIMESTAMPTZ [not null]
  end_at TIMESTAMPTZ [not null]
  is_partial_day BOOLEAN [not null, default: false]
  reason TEXT
  document_url TEXT
  status time_off_status [not null, default: 'pending']
  reviewed_by UUID [ref: > people.id]
  reviewed_at TIMESTAMPTZ
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
  updated_at TIMESTAMPTZ [not null, default: `NOW()`]
}

Table holidays {
  id UUID [pk, default: `gen_random_uuid()`]
  company_id UUID [not null, ref: > companies.id]
  name VARCHAR(255) [not null]
  date DATE [not null]
  is_recurring BOOLEAN [not null, default: true]
  paid BOOLEAN [not null, default: true]
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
  indexes {
    (company_id, date) [unique]
  }
}

Table notifications {
  id UUID [pk, default: `gen_random_uuid()`]
  company_id UUID [not null, ref: > companies.id]
  person_id UUID [not null, ref: > people.id]
  type VARCHAR(50) [not null]
  channel notification_channel [not null, default: 'email']
  subject VARCHAR(255) [not null]
  body TEXT [not null]
  status notification_status [not null, default: 'pending']
  sent_at TIMESTAMPTZ
  read_at TIMESTAMPTZ
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
}

Table notification_preferences {
  id UUID [pk, default: `gen_random_uuid()`]
  person_id UUID [not null, ref: > people.id]
  type VARCHAR(50) [not null]
  channel notification_channel [not null]
  enabled BOOLEAN [not null, default: true]
  indexes {
    (person_id, type, channel) [unique]
  }
}

Table integrations {
  id UUID [pk, default: `gen_random_uuid()`]
  company_id UUID [not null, ref: > companies.id]
  type VARCHAR(50) [not null]
  name VARCHAR(255) [not null]
  config JSONB [not null]
  is_active BOOLEAN [not null, default: true]
  last_sent_at TIMESTAMPTZ
  last_error TEXT
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
  updated_at TIMESTAMPTZ [not null, default: `NOW()`]
}

Table feature_flags {
  id UUID [pk, default: `gen_random_uuid()`]
  company_id UUID [not null, ref: > companies.id]
  flag VARCHAR(100) [not null]
  enabled BOOLEAN [not null, default: false]
  updated_at TIMESTAMPTZ [not null, default: `NOW()`]
  indexes {
    (company_id, flag) [unique]
  }
}

Table audit_entries {
  id UUID [pk, default: `gen_random_uuid()`]
  company_id UUID [not null, ref: > companies.id]
  actor_id UUID [ref: > people.id]
  resource_type VARCHAR(50) [not null]
  resource_id UUID [not null]
  action VARCHAR(50) [not null]
  old_values JSONB
  new_values JSONB
  ip_address INET
  user_agent TEXT
  prev_hash VARCHAR(64) [not null]
  hash VARCHAR(64) [not null]
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
  Note: 'Append-only — UPDATE/DELETE blocked by triggers. HMAC-SHA256 chained.'
}

Table sessions {
  id UUID [pk, default: `gen_random_uuid()`]
  company_id UUID [not null, ref: > companies.id]
  person_id UUID [not null, ref: > people.id]
  token_hash VARCHAR(64) [not null]
  refresh_token_hash VARCHAR(64)
  ip_address INET
  user_agent TEXT
  expires_at TIMESTAMPTZ [not null]
  last_used_at TIMESTAMPTZ
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
  revoked_at TIMESTAMPTZ
}

Table password_reset_tokens {
  id UUID [pk, default: `gen_random_uuid()`]
  company_id UUID [not null, ref: > companies.id]
  person_id UUID [not null, ref: > people.id]
  token_hash VARCHAR(64) [not null]
  expires_at TIMESTAMPTZ [not null]
  used_at TIMESTAMPTZ
  created_at TIMESTAMPTZ [not null, default: `NOW()`]
}

Table consent_records {
  id UUID [pk, default: `gen_random_uuid()`]
  company_id UUID [not null, ref: > companies.id]
  person_id UUID [not null, ref: > people.id]
  type VARCHAR(50) [not null]
  granted BOOLEAN [not null, default: true]
  ip_address INET
  granted_at TIMESTAMPTZ [not null, default: `NOW()`]
  revoked_at TIMESTAMPTZ
}

Table region_routing {
  company_id UUID [pk, ref: > companies.id, note: '1:1 with companies']
  region VARCHAR(20) [not null]
  assigned_at TIMESTAMPTZ [not null, default: `NOW()`]
}

Table compliance_violations {
  id UUID [pk, default: `gen_random_uuid()`]
  company_id UUID [not null, ref: > companies.id]
  person_id UUID [ref: > people.id]
  shift_assignment_id UUID [ref: > shift_assignments.id]
  violation_type violation_type [not null]
  severity VARCHAR(10) [not null, default: 'warning']
  description TEXT [not null]
  detected_at TIMESTAMPTZ [not null, default: `NOW()`]
  detected_by VARCHAR(50) [not null, default: 'system']
  status violation_status [not null, default: 'open']
  acknowledged_at TIMESTAMPTZ
  acknowledged_by UUID [ref: > people.id]
  resolved_at TIMESTAMPTZ
  resolved_by UUID [ref: > people.id]
  notes TEXT
}

Ref: company_settings.company_id - companies.id
Ref: locations.company_id - companies.id
Ref: positions.company_id - companies.id
Ref: skills.company_id - companies.id
Ref: teams.company_id - companies.id
Ref: people.company_id - companies.id
Ref: shift_templates.company_id - companies.id
Ref: shifts.company_id - companies.id
Ref: clock_entries.company_id - companies.id
Ref: time_off_requests.company_id - companies.id
Ref: holidays.company_id - companies.id
Ref: notifications.company_id - companies.id
Ref: integrations.company_id - companies.id
Ref: feature_flags.company_id - companies.id
Ref: audit_entries.company_id - companies.id
Ref: sessions.company_id - companies.id
Ref: password_reset_tokens.company_id - companies.id
Ref: consent_records.company_id - companies.id
Ref: compliance_violations.company_id - companies.id
Ref: region_routing.company_id - companies.id

Ref: teams.location_id - locations.id
Ref: people.location_id - locations.id
Ref: shifts.location_id - locations.id
Ref: clock_entries.location_id - locations.id

Ref: teams.manager_id - people.id
Ref: people.team_id - teams.id
Ref: people.position_id - positions.id
Ref: people.invited_by - people.id

Ref: shift_templates.team_id - teams.id
Ref: shift_templates.position_id - positions.id
Ref: shifts.team_id - teams.id
Ref: shifts.template_id - shift_templates.id
Ref: shifts.position_id - positions.id

Ref: position_skills.position_id - positions.id
Ref: position_skills.skill_id - skills.id

Ref: team_memberships.team_id - teams.id
Ref: team_memberships.person_id - people.id

Ref: person_skills.person_id - people.id
Ref: person_skills.skill_id - skills.id

Ref: template_skills.shift_template_id - shift_templates.id
Ref: template_skills.skill_id - skills.id

Ref: recurrence_rules.shift_template_id - shift_templates.id

Ref: shift_skills.shift_id - shifts.id
Ref: shift_skills.skill_id - skills.id

Ref: shift_assignments.shift_id - shifts.id
Ref: shift_assignments.person_id - people.id
Ref: shift_assignments.approved_by - people.id

Ref: shift_swap_requests.shift_assignment_id - shift_assignments.id
Ref: shift_swap_requests.requester_id - people.id
Ref: shift_swap_requests.target_id - people.id
Ref: shift_swap_requests.manager_id - people.id

Ref: clock_entries.shift_assignment_id - shift_assignments.id
Ref: clock_entries.person_id - people.id

Ref: time_off_requests.person_id - people.id
Ref: time_off_requests.reviewed_by - people.id

Ref: notifications.person_id - people.id
Ref: notification_preferences.person_id - people.id

Ref: sessions.person_id - people.id
Ref: password_reset_tokens.person_id - people.id
Ref: consent_records.person_id - people.id

Ref: audit_entries.actor_id - people.id

Ref: compliance_violations.person_id - people.id
Ref: compliance_violations.shift_assignment_id - shift_assignments.id
Ref: compliance_violations.acknowledged_by - people.id
Ref: compliance_violations.resolved_by - people.id
